Display stealth addresses for v1 txs in tx page

--- a/src/templates/block.html
+++ b/src/templates/block.html
@@ -137,7 +137,7 @@
                                     {{#is_stealth_tx}}
                                     {{#tx_outputs}}
                                     <li>
-                                        <span title="{{to}}" class="txio-address" style="color:#2ab1f3;">{{to}}</span>
+                                        <span id="out_{{to}}" title="{{to}}" class="txio-address" style="color:#2ab1f3;">{{to}}</span>
                                         <span class="txio-amount">{{amount}}</span>
                                     </li>
                                     {{/tx_outputs}}
