--- a/src/templates/css/style.css
+++ b/src/templates/css/style.css
@@ -651,7 +651,7 @@ li {
 .tx-item-footer-additional-box {
     font-size: 16px;
     line-height: 30px;
-    background: #ddd;
+    background: #eee;
     display: inline-block;
     padding-left: 25px;
     padding-right: 10px;
