--- a/src/templates/index2.html
+++ b/src/templates/index2.html
@@ -41,16 +41,14 @@
                 <ul>
                     <li>
                         <dl>
-                            {{#emission}}
                             <dt><span class="text-muted">Circulating Supply</span></dt>
-                            <dd>{{amount}} <span class="text-muted">ETN</span></dd>
-                            {{/emission}}
+                            <dd><span id="circ-supply"></span> <span class="text-muted">ETN</span></dd>
                         </dl>
                     </li>
                     <li>
                         <dl>
                             <dt><span class="text-muted">Max Supply</span></dt>
-                            <dd>21,000,000,000 <span class="text-muted">ETN</span></dd>
+                            <dd>21,000,000,000.00 <span class="text-muted">ETN</span></dd>
                         </dl>
                     </li>
                 </ul>
