--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -5,8 +5,8 @@
         <div class="center">
             <h6 style="margin-top:10px">
                 <a href="https://github.com/electroneum/electroneum-blockchain-explorer">source code</a>
-                | explorer version (api): develop-2021-04-20-8d27da8 (1.1)
-                | electroneum version: 3.3.1.0-e53810204
+                | explorer version (api): {{git_branch_name}}-{{last_git_commit_date}}-{{last_git_commit_hash}} ({{api}})
+                | electroneum version: {{electroneum_version_full}}
             </h6>
         </div>
     </div>
